[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ocptv-autoval"
version = "0.0.1"
description = "Autoval hardware testing framework"
readme = "README.md"
authors = [
    { name = "OCP Test & Validation", email = "ocp-test-validation@OCP-All.groups.io" },
]
license = { file = "LICENSE.md" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Topic :: System :: Hardware",
]
keywords = ["ocp", "ocptv", "autoval", "hardware", "testing", "framework"]
dependencies = [
    "setuptools==69.5.1",  # using pkg_resources
    "ocptv==0.1.6",
    "six",
    "iopath",
    "paramiko"
]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = []  # TODO: needs linter, type checker
publish = ["build", "twine"]

[project.urls]
"Homepage" = "https://github.com/opencomputeproject/ocp-diag-autoval"
"Bug reports" = "https://github.com/opencomputeproject/ocp-diag-autoval/issues"
"Source" = "https://github.com/opencomputeproject/ocp-diag-autoval"

[project.scripts]
autoval_test_runner = "autoval.autoval_test_runner:main"

[tool.setuptools.package-data]
"*" = ["*.json"]
